fixed hightlight, footer, header and little fixes to font-size and spacing at evaluation-page

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,4 +1,4 @@
-<mat-divider></mat-divider>
+<!--mat-divider></mat-divider-->
 
 <footer>
   <div fxFlex="7" fxFlex.lt-md="15" class="first_img fifth_container" attr.aria-label="LASIGE website">
