--- a/src/app/pages/evaluation-page/evaluation-page.component.scss
+++ b/src/app/pages/evaluation-page/evaluation-page.component.scss
@@ -124,14 +124,13 @@ section {
 
 .hidden_link {
   font-weight: bold;
-  text-decoration: none !important;
+  text-decoration: none;
   color: whitesmoke;
-  line-height: 30px;
 }
 
 .hidden_link:hover {
-  text-decoration: underline !important;
-  text-decoration-color: $orange-deep !important;
+  text-decoration: underline;
+  text-decoration-color: $orange-deep;
 }
 
 h1 {
@@ -327,7 +326,7 @@ h1 {
   }
 
   li {
-    padding-bottom: 0.5vh;
+    padding-bottom: 0.5em;
   }
 
   h3 {
@@ -335,6 +334,14 @@ h1 {
     text-transform: none;
     font-size: medium;
     font-family: 'Roboto', sans-serif;
+  }
+}
+
+.rule_description {
+  .links {
+    margin-top: 0;
+    padding-left: 0;
+    list-style-type: none;
   }
 }
 
@@ -417,10 +424,15 @@ h1 {
   text-align: left;
 }
 
+.line_breaker {
+  margin-top: 1em;
+}
+
 img {
   width: 25vw;
   outline: none;
   min-width: 250px;
+  margin-top: 3%;
 }
 
 mat-expansion-panel {
