--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -1,10 +1,12 @@
 img {
   width: 25vw;
   min-width: 250px;
+  margin-top: 3%;
 }
 
 .line {
   width: 100%;
+  height: 50px;
   text-align: center;
   font-size: 1.1em;
   padding: 1vh 0;
@@ -17,5 +19,6 @@ img {
     text-transform: uppercase;
     font-family: 'Oswald', sans-serif;
     text-decoration: none;
+    width: 100%;
   }
 }
