--- a/src/app/pages/evaluation-page/evaluation-page.component.scss
+++ b/src/app/pages/evaluation-page/evaluation-page.component.scss
@@ -13,6 +13,47 @@ $inapplicable: white;
 $inapplicable-card: #595959;
 $orange-deep: #F4511E;
 
+.column {
+  flex-direction: column;
+  -webkit-box-orient: vertical;
+}
+.row {
+  flex-direction: row;
+  -webkit-box-orient: horizontal;
+}
+
+*[class*=' flex-'], *[class^='flex-']{
+  flex: 1 1 100%;
+  box-sizing: border-box;
+  -webkit-box-flex: 1;
+}
+
+@mixin define-flex($value) {
+  .row .flex-#{$value} {
+    max-width: $value * 1%;
+  }
+  .column .flex-#{$value} {
+    max-height: $value * 1%;
+  }
+}
+@include define-flex(5);
+@include define-flex(25);
+@include define-flex(30);
+@include define-flex(50);
+@include define-flex(80);
+@include define-flex(95);
+@include define-flex(100);
+
+.start.center{
+  place-content: center flex-start;
+  align-items: center
+}
+.center.center2 {
+  place-content: center center;
+  align-items: center
+}
+
+
 #evaluation-content {
   padding-bottom: 5vh;
 }
@@ -349,9 +390,9 @@ h1 {
   h3 {
     font-size: larger;
 
-    &:not(:first-of-type) {
+    /*&:not(:first-of-type) {
       margin-top: 0;
-    }
+    }*/
 
     span {
       &.passed {
@@ -389,6 +430,16 @@ h1 {
     &.rule_subtitle {
       margin: 1em 0 0.5em 0 !important;
     }
+  }
+}
+
+.results_box {
+  max-height: 20em;
+  overflow-y: auto;
+  border: 2px solid white;
+  padding: 1em;
+  .line_breaker:first-child {
+    margin-top: 0;
   }
 }
 
@@ -471,3 +522,7 @@ pre {
   left: -2%;
   width: 100vw;
 } */
+
+:not(mat-spinner){
+  transition: none;
+}
