--- a/src/app/pages/evaluation-page/evaluation-page.component.scss
+++ b/src/app/pages/evaluation-page/evaluation-page.component.scss
@@ -276,6 +276,11 @@ h1 {
   }
 }
 
+::ng-deep .mat-form-field-wrapper {
+  padding-bottom: 0 !important;
+  margin: 0 !important;
+}
+
 @media screen and (max-width: 599px) {
   .filter {
     h2 {
