--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,25 +1,26 @@
 <!--mat-divider></mat-divider-->
 
 <footer>
-  <div fxFlex="7" fxFlex.lt-md="15" class="first_img fifth_container" attr.aria-label="LASIGE website">
+  <div fxFlex="7" fxFlex.lt-md="15" class="first_img fifth_container" aria-label="LASIGE website">
     <a href="http://www.lasige.di.fc.ul.pt/" target="_blank">
       <img alt="LaSIGE website" src="/assets/images/lasige_logo.png">
     </a>
   </div>
-  <div fxFlex="7" fxFlex.lt-md="15" class="fifth_container" attr.aria-label="FCUL website">
+  <div fxFlex="7" fxFlex.lt-md="15" class="fifth_container" aria-label="FCUL website">
     <a href="https://ciencias.ulisboa.pt/" target="_blank">
       <img alt="FCUL website"
            src="/assets/images/ciencias_ulisboa_marca_horizontal_rgb_branco.png">
     </a>
   </div>
-  <div fxFlex="7" fxFlex.lt-md="15" class="fifth_container" attr.aria-label="FCT website" >
+  <div fxFlex="7" fxFlex.lt-md="15" class="fifth_container" aria-label="FCT website" >
     <a href="https://www.fct.pt/" target="_blank">
       <img alt="FCT website" src="/assets/images/fct_logo.png">
     </a>
   </div>
-  <div fxFlex="7" fxFlex.lt-md="15" class="last_img fifth_container" attr.aria-label="W3C WAI-Tools website">
+  <div fxFlex="7" fxFlex.lt-md="15" class="last_img fifth_container" aria-label="W3C WAI-Tools website">
     <a href="https://www.w3.org/WAI/about/projects/wai-tools/" target="_blank">
-      <svg role="img" attr.aria-label="W3C" viewBox="0 0 68 34" xmlns="http://www.w3.org/2000/svg" fill='white' class="w3c">
+      <img alt="W3C website" src="/assets/images/w3clogo.png">
+      <!--svg role="img" attr.aria-label="W3C" viewBox="0 0 68 34" xmlns="http://www.w3.org/2000/svg" fill='white' class="w3c">
         <title>W3C WAI-Tools website</title>
         <g>
           <path
@@ -31,7 +32,7 @@
           <path
             d="m60.102 24.063s-1.057 1.889-1.715 2.617c-.659.728-1.837 2.01-3.292 2.651s-2.218.762-3.656.624c-1.437-.138-2.772-.97-3.24-1.317s-1.664-1.369-2.34-2.322-1.733-2.859-1.733-2.859.589 1.91.958 2.721c.212.467.864 1.894 1.789 3.136.863 1.159 2.539 3.154 5.086 3.604 2.547.451 4.297-.693 4.73-.97s1.346-1.042 1.924-1.66c.603-.645 1.174-1.468 1.49-1.962.231-.36.607-1.092.607-1.092z"></path>
         </g>
-      </svg>
+      </svg-->
     </a>
   </div>
   <!--<div class="big" fxHide.lt-md>LASIGE - Departamento de Informática</div>
