--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -40,10 +40,9 @@ p:last-of-type {
   }
 }
 
-/*.main {
-  min-height: calc(80vh - 5vh - 50px);
-  padding-bottom: 5vh;
-}*/
+.main {
+  padding-bottom: 4em;
+}
 
 app-footer {
   background-color: #943709;
