--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -4,9 +4,9 @@
 <section fxLayout="row" fxLayoutAlign="center center">
   <div fxFlex="60" fxFlex.lt-md="75" fxFlex.lt-sm="90">
     <h1>{{ 'HOMEPAGE.title' | translate }}</h1>
-    <app-url-input></app-url-input>
+    <app-url-input fxLayout="row"></app-url-input>
   </div>
 </section>
-<div fxLayout="row" class="line">
+<div fxLayout="row" class="footer">
   <a routerLink="about"> {{ 'HOMEPAGE.about' | translate }} </a>
 </div>
