--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -1,7 +1,4 @@
 footer {
-  &.light-theme {
-    background-color: #9999996b !important;
-  }
   padding: 5px 0;
   height: 50px;
 }
@@ -12,16 +9,15 @@ footer {
 
 .last_img{
   margin-right: 1vw;
+  img {
+    padding-top: 0.20em;
+    height: 85%;
+  }
 }
 
 .fifth_container{
   display: flex;
   vertical-align: middle;
-}
-
-.w3c {
-  height: 75%;
-  padding-top: 0.5vh;
 }
 
 img, svg {
