removed justify text in about page

--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -21,6 +21,7 @@
       </li>
       <li><a href="http://www.accessible-eu.org/" target="_blank">ACCESSIBLE</a> (EU FP7)</li>
     </ul>
+    <p>Get in touch with us: <a href="mailto:qualweb@fc.ul.pt">qualweb@fc.ul.pt</a></p>
   </div>
 </div>
 
