allow screen reader to read loading messages

--- a/src/app/pages/evaluation-page/evaluation-page.component.html
+++ b/src/app/pages/evaluation-page/evaluation-page.component.html
@@ -585,7 +585,7 @@
   <div fxLayoutAlign="center center">
     <img src="/assets/images/logo2.png" alt="Qualweb logo"/>
   </div>
-  <div fxLayout="column" fxLayoutAlign="center center">
+  <div fxLayout="column" fxLayoutAlign="center center" aria-live="polite">
     <mat-spinner color="primary" [diameter]="130" [strokeWidth]="13"></mat-spinner>
     <p [innerHTML]="'EVALUATION_PAGE.loading.' + currentModule | translate"></p>
   </div>
