--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,27 +1,67 @@
-<div fxLayout="column" fxLayoutAlign="center center">
-  <img src="/assets/images/logo2.png" alt="Qualweb logo"/>
-</div>
+
 <div class="main" fxLayout="row" fxLayoutAlign="center center">
-  <div fxFlex="85">
-    <p>{{ 'ABOUT_PAGE.1' | translate }}</p>
-    <p>{{ 'ABOUT_PAGE.2' | translate }}<a
-      href="https://www.w3.org/WAI/WCAG21/Techniques/" target="_blank">{{ 'ABOUT_PAGE.wcag' | translate }}</a>{{ 'ABOUT_PAGE.and' | translate }}
-      <a href="https://act-rules.github.io/pages/about" target="_blank">{{ 'ABOUT_PAGE.act' | translate }}</a>.</p>
-    <p>{{ 'ABOUT_PAGE.3' | translate }}</p>
-    <p>{{ 'ABOUT_PAGE.4' | translate }}<a
-      href="https://github.com/qualweb" target="_blank">https://github.com/qualweb</a>. {{ 'ABOUT_PAGE.5' | translate }}<a
-      href="https://github.com/qualweb/cli" target="_blank">{{ 'ABOUT_PAGE.cli' | translate }}</a>.
+  <div fxFlex="80">
+    <img ngClass.gt-xs="float_right" ngClass.lt-sm="align_center" src="/assets/images/logo2.png" alt="Qualweb logo"/>
+
+    <hr class="combo_breaker">
+    <h2>{{ 'ABOUT_PAGE.title_about' | translate }}</h2>
+    <p>{{ 'ABOUT_PAGE.about_1' | translate }}</p>
+    <p>
+      {{ 'ABOUT_PAGE.about_2' | translate }}
+      <a href="https://www.w3.org/WAI/WCAG21/Techniques/" target="_blank">{{ 'ABOUT_PAGE.about_wcag' | translate }}</a>
+      {{ 'ABOUT_PAGE.about_and' | translate }}
+      <a href="https://act-rules.github.io/pages/about" target="_blank">{{ 'ABOUT_PAGE.about_act' | translate }}</a>.
     </p>
-    <p>{{ 'ABOUT_PAGE.projects' | translate }}</p>
+    <p>{{ 'ABOUT_PAGE.about_3' | translate }}</p>
+    <p>{{ 'ABOUT_PAGE.about_4' | translate }}
+      <a href="https://github.com/qualweb" target="_blank">https://github.com/qualweb</a>.
+      {{ 'ABOUT_PAGE.about_5' | translate }}
+      <a href="https://github.com/qualweb/cli" target="_blank">{{ 'ABOUT_PAGE.about_cli' | translate }}</a>{{'ABOUT_PAGE.about_6' | translate}}
+    </p>
+    <p>{{ 'ABOUT_PAGE.about_projects' | translate }}</p>
     <ul>
-      <li><a href="https://www.w3.org/WAI/Tools/" target="_blank">WAI-Tools</a> (EU H2020)</li>
-      <li><a
-        href="https://www.fct.pt/apoios/projectos/consulta/vglobal_projecto?idProjecto=105079&idElemConcurso=2769" target="_blank">QualWeb</a>
-        (FCT)
+      <li>
+        <a href="https://www.w3.org/WAI/Tools/" target="_blank">
+          WAI-Tools (EU H2020)
+        </a>
       </li>
-      <li><a href="http://www.accessible-eu.org/" target="_blank">ACCESSIBLE</a> (EU FP7)</li>
+      <li>
+        <a href="https://www.fct.pt/apoios/projectos/consulta/vglobal_projecto?idProjecto=105079&idElemConcurso=2769" target="_blank">
+          QualWeb (FCT)
+        </a>
+      </li>
+      <li>
+        <a href="http://www.accessible-eu.org/" target="_blank">
+          ACCESSIBLE (EU FP7)
+        </a>
+      </li>
     </ul>
-    <p>Get in touch with us: <a href="mailto:qualweb@fc.ul.pt">qualweb@fc.ul.pt</a></p>
+
+    <hr class="combo_breaker">
+    <h2>{{ 'ABOUT_PAGE.title_accessibility' | translate }}</h2>
+    <p>
+      {{ 'ABOUT_PAGE.access_1' | translate }}
+      <a href="https://www.w3.org/TR/WCAG21/" target="_blank">{{ 'ABOUT_PAGE.access_wcag' | translate }}</a>
+      {{ 'ABOUT_PAGE.access_2' | translate }}
+      <a href="mailto:qualweb@fc.ul.pt">{{ 'ABOUT_PAGE.access_email' | translate }}</a>
+      {{ 'ABOUT_PAGE.access_3' | translate }}
+    </p>
+    <h3>{{ 'ABOUT_PAGE.access_features' | translate }}</h3>
+    <ul>
+      <li>{{ 'ABOUT_PAGE.features_1' | translate }}</li>
+      <li>{{ 'ABOUT_PAGE.features_2' | translate }}</li>
+      <li>{{ 'ABOUT_PAGE.features_3' | translate }}</li>
+      <li>{{ 'ABOUT_PAGE.features_4' | translate }}</li>
+      <li>{{ 'ABOUT_PAGE.features_5' | translate }}</li>
+    </ul>
+
+    <hr class="combo_breaker">
+    <h2>{{ 'ABOUT_PAGE.title_contact' | translate }}</h2>
+    <p>
+      {{ 'ABOUT_PAGE.contact_1' | translate }}
+      <a href="mailto:qualweb@fc.ul.pt">{{ 'ABOUT_PAGE.contact_email' | translate }}</a>
+    </p>
+
   </div>
 </div>
 
