--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -1,3 +1,5 @@
+$orange-deep: #F4511E;
+
 img {
   width: 20vw;
   min-width: 250px;
@@ -29,6 +31,10 @@ ul {
   margin-top: 0;
 }
 
+p {
+  line-height: 1.5;
+}
+
 p:last-of-type {
   margin-bottom: 5px;
 }
@@ -47,4 +53,27 @@ app-footer {
   background-color: #943709;
   position: fixed;
   bottom: 0;
+}
+
+.combo_breaker {
+  margin: 2.5em 0 0.2em;
+  max-width: 2em;
+  border: 0.1em solid $orange-deep;
+  text-align: left;
+}
+.combo_breaker:first-of-type{
+  margin-top: 1.3em;
+}
+
+h2 {
+  margin-top: 0;
+}
+
+.float_right {
+  float: right;
+}
+.align_center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
